syntax = "proto3";

package pb;

option go_package = "addsrv_gRPC/pb";

service Trim{
  rpc TrimSpace(TrimRequest) returns(TrimResponse){}
}

message TrimRequest{
  string s = 1;
}

message TrimResponse{
  string s = 1;
}

